# intellidocs-frontend

./: .gitignore  README.md  package-lock.json  package.json
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src/app/: layout.tsx  page.tsx
src/app/admin/audit/: page.tsx
src/app/admin/departments/: page.tsx
src/app/admin/notifications/: page.tsx
src/app/admin/tenants/: page.tsx
src/app/change-password/: page.tsx
src/app/documents/: page.tsx
src/app/forgot-password/: page.tsx
src/app/login/: page.tsx
src/app/profile/: page.tsx
src/app/reports/: page.tsx
src/app/search/: page.tsx
src/app/upload/: page.tsx
src/app/users/: page.tsx
src/app/view/: page.tsx
src/app/view/[token]/: page.tsx
src/components/: DocumentModal.tsx  NotificationBell.tsx  Sidebar.tsx  TenantModal.tsx
src/lib/: api.ts  utils.ts
